--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,9 @@
-/*! CSS3 DESDE CERO | César Avilés | https://github.com/grafiaviles/master-class-escalab-landing-page */
+/* Estilos Globales */
 
-/* ESTILOS GLOBALES */
 * {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
 }
 
 html {
@@ -20,7 +19,7 @@ body {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
-    justify-content: center;
+    justify-self: center;
     min-height: 100vh;
 }
 
@@ -35,13 +34,14 @@ hgroup {
     display: block;
     width: 100%;
 }
+
 a {
     text-decoration: none;
     outline: none;
     transition: .4s all ease-in-out;
 }
 
-li {
+ul {
     list-style: none;
 }
 
@@ -49,10 +49,14 @@ footer {
     align-self: flex-end;
     width: 100%;
 }
-h1, h2, h3 {
+
+h1,
+h2,
+h3 {
     font-weight: 700;
     color: #4E73DF;
 }
+
 h4,
 h5,
 h6,
@@ -67,7 +71,7 @@ p {
 }
 
 .img-responsive {
-    max-width:100%;
+    max-width: 100%;
     width: 100%;
 }
 
@@ -77,10 +81,11 @@ p {
 .header-home {
     display: flex;
     flex-direction: column;
-    align-items:center;
+    align-items: center;
     justify-content: center;
     background-color: #4E73DF;
 }
+
 
 /* MAIN MENU  */
 
@@ -102,9 +107,10 @@ p {
     width: 115px;
 }
 
-.menu-link-desktop {
+.menu-link-desktop,
+.menu-link-mobile {
     display: flex;
-    align-items:center;
+    align-items: center;
     justify-content: center;
 }
 
@@ -113,11 +119,12 @@ p {
 }
 
 .links-menu {
-    padding: 0 16px;
-    line-height:70px;
-    height:70;
+    padding: 0 1rem;
+    line-height: 70px;
+    height: 70px;
     display: block;
     color: white;
+    transition: .4s all ease-in-out;
 }
 
 .links-menu:hover:not(.cta-btn) {
@@ -125,41 +132,72 @@ p {
 }
 
 .cta-btn {
-    font-weight: bold;
+    font-weight: 700;
     background-color: #7FC80E;
-    line-height:40px;
-    height:40px;
+    line-height: 40px;
+    height: 40px;
     border-radius: 5px;
-    box-shadow: 0 10px 20px 0 rgba(0, 0, 0, .2);
+    box-shadow: 0 10px 20px 0 rgba(0, 0, 0, 0.1);
+    transition: .4s all ease-in-out;
 }
 
-.cta-btn:hover, .btns:hover {
+.cta-btn:hover {
     transform: scale(.95);
 }
+
+
+/* MOBILE MENÚ */
+
+@media only screen and (max-width: 820px) {
+    .logotipo {
+        text-align: center;
+        margin: auto;
+        padding: 1rem 0;
+        width: 100%;
+    }
+    .logotipo img {
+        position: relative;
+        top: 5px;
+    }
+    .menu-link-desktop {
+        display: none;
+    }
+    .menu-link-mobile {
+        display: flex;
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        background-color: #4E73DF;
+        width: 100%;
+        box-shadow: 0 -5px 20px 0 rgba(0, 0, 0, 0.1);
+    }
+    .links-menu {
+        font-size: 14px;
+    }
+    .cta-btn {
+        line-height: 35px;
+        height: 35px;
+    }
+}
+
 
 /* HERO */
 
 .hero {
-    text-align: left;
-    padding: 0 32px;
-    min-height: 90vh;
-    background-color: #4E73DF;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-.hero .container {
+    margin: auto;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    max-width: 1200px;
-    width: 100%;
-    margin: auto;
+    text-align: left;
+    padding: 0 2rem;
+    min-height: 90vh;
 }
 
-.title-hero, .description-hero {
+.title-hero {
     color: white;
+    margin-bottom: 20px;
+    font-size: 45px;
+    line-height: 55px;
 }
 
 .first-title {
@@ -167,31 +205,45 @@ p {
     display: block;
 }
 
-.title-hero {
-    margin-bottom: 20px;
-    font-size:45px;
-    line-height: 55px;
-}
 .description-hero {
+    color: white;
     font-weight: 400;
-    opacity: .7;
-    line-height: 28px;
+    margin-bottom: 2rem;
+    opacity: 0.7;
 }
 
 .image-hero {
     margin-top: 4rem;
 }
 
+
+/* HERO MOBILE */
+
+@media only screen and (max-width: 820px) {
+    .hero {
+        flex-wrap: wrap;
+        padding-top: 6rem;
+    }
+    .title-hero {
+        font-size: 30px;
+        line-height: 45px;
+    }
+    .image-hero {
+        margin-top: 2rem;
+    }
+}
+
+
 /* BOTONES */
 
 .btns {
     background-color: #7FC80E;
-    line-height:65px;
-    height:65px;
-    padding:  0 2rem;
-    margin-top: 2rem;
+    line-height: 65px;
+    height: 65px;
+    padding: 0 2rem;
     display: flex;
     justify-content: center;
+    align-items: center;
     text-align: center;
     width: 100%;
     max-width: 300px;
@@ -199,13 +251,28 @@ p {
     font-weight: 700;
     border-radius: 10px;
     box-shadow: 0 10px 20px 0 rgba(0, 0, 0, 0.1);
+    transition: .4s all ease-in-out;
 }
 
-/* SECTION PAGE GENERIC */
+.btns:hover {
+    transform: scale(.95);
+}
+
+
+/* Botones Mobile */
+
+@media only screen and (max-width: 820px) {
+    .btns {
+        max-width: 100%;
+    }
+}
+
+
+/* SECTION PAGE SERVICES */
 
 .section-page {
-    padding:4rem 0;
-    overflow:hidden;
+    padding: 4rem 0;
+    overflow: hidden;
 }
 
 .title-section {
@@ -213,41 +280,42 @@ p {
     margin-bottom: 3rem;
 }
 
-/* SECTION SERVICIOS */
+
+/* Section Servicios */
 
 .section-services .container {
     display: flex;
     justify-content: center;
     align-items: center;
     margin: auto;
-    flex-wrap: wrap;    
+    flex-wrap: wrap;
 }
+
 .section-services .container .box-services {
     width: 25%;
     padding: 2rem;
 }
+
 .section-services .container .box-services .box-image-services {
     box-shadow: 0 10px 40px rgba(0, 0, 0, 0.07);
     height: 200px;
-    width: 200px;
     display: flex;
     justify-content: center;
     align-items: center;
     border-radius: 10px;
     padding: 2rem;
+    width: 200px;
     margin: auto;
     margin-bottom: 25px;
     transition: .4s all ease-in-out;
     border: 1px white solid;
-    cursor: pointer;
 }
-.section-services .container .box-services p {
-    line-height: 25px;
-}
+
 .section-services .container .box-services .box-image-services:hover {
     box-shadow: 0 20px 40px -20px rgba(78, 114, 223, 0.5);
     border: 1px #4E73DF solid;
 }
+
 .section-services .container .box-services .box-image-services img {
     max-width: 160px;
 }
@@ -256,8 +324,23 @@ p {
     margin-bottom: 1rem;
 }
 
+@media only screen and (max-width: 820px) {
+    .title-section {
+        font-size: 35px;
+    }
+    .section-services .container .box-services {
+        width: 50%;
+    }
+}
 
-/* SECTION BENEFITS */
+@media only screen and (max-width: 480px) {
+    .section-services .container .box-services {
+        width: 100%;
+    }
+}
+
+
+/* Section Benefits */
 
 .section-benefits {
     background-color: #DDEAFB;
@@ -285,25 +368,14 @@ p {
     align-items: center;
     justify-content: center;
     text-align: left;
-    margin-bottom: 20px;
 }
 
 .section-benefits .container .box-benefits figure {
     width: auto;
 }
-.section-benefits .container .box-benefits figure .icon-benefits {
-    width: 100px;
-}
 
 .section-benefits .container .box-benefits div {
     margin-top: -25px;
-    margin-left: 1rem;
-}
-.section-benefits .container .box-benefits div h3 {
-    margin-bottom: 10px;
-}
-.section-benefits .container .box-benefits div p {
-    line-height: 25px;
 }
 
 .section-benefits .box-image-benefits {
@@ -317,54 +389,96 @@ p {
     max-width: 550px;
 }
 
+@media only screen and (max-width: 820px) {
+    .section-benefits {
+        flex-direction: column;
+    }
+    .section-benefits .container {
+        width: 100%;
+        align-items: center;
+        justify-content: flex-start;
+        padding: 0;
+    }
+    .section-benefits .title-section {
+        padding-left: 0;
+    }
+    .section-benefits .container .box-benefits {
+        margin-bottom: 2rem;
+        align-items: flex-start;
+        padding: 0 1rem 0 0;
+    }
+    .section-benefits .container .box-benefits h3 {
+        line-height: 25px;
+    }
+    .section-benefits .container .box-benefits div {
+        margin-top: 0;
+    }
+    .section-benefits .container .box-benefits figure img {
+        width: 100px;
+    }
+    .section-benefits .box-image-benefits {
+        right: initial;
+        bottom: 0;
+    }
+}
+
 
 /* CONTACTO SECTION */
 
 .section-contact {
     background-image: url(../images/img-footer.svg);
-    background-repeat: no-repeat;
     background-position-x: left;
     background-position-y: 350px;
+    background-repeat: no-repeat;
 }
 
 .form-landing-page {
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    flex-wrap: wrap;
     max-width: 720px;
     width: 100%;
+    flex-wrap: wrap;
     margin: auto;
 }
 
 .form-landing-page .input-field {
     width: 50%;
     margin-bottom: 2rem;
+    box-sizing: border-box;
     padding: 0 .75rem;
     min-height: 1px;
 }
+
+
+/* Selecciona el 5to div que contenga la clase .input-field */
+
 .form-landing-page .input-field:nth-of-type(5) {
     width: 100%;
-    margin-bottom:1.4rem;
+    margin-bottom: 1.4rem;
 }
 
-input, select, textarea {
-    font-size:14px;
-    outline:none;
-    height:3rem;
+input,
+select,
+textarea {
+    font-size: 14px;
+    outline: none;
+    height: 3rem;
     width: 90%;
     box-sizing: content-box;
     overflow: visible;
     color: #9c9c9c;
     padding: 0 1rem;
     border-radius: 5px;
+    font-family: 'Poppins', sans-serif;
     box-shadow: none;
     transition: .4s all;
     border: none;
-    border: 1px solid #9c9c9c;
+    border: 1px solid #ccc;
     -webkit-appearance: none;
 }
-input:focus, textarea:focus {
+input:focus,
+textarea:focus {
     box-shadow: 0 20px 40px -20px rgba(78, 114, 223, 0.5);
     border: 1px solid #4E73DF;
     color: #4E73DF;
@@ -375,41 +489,43 @@ input[type=number]::-webkit-outer-spin-button {
     -webkit-appearance: none;
 }
 
-input.error, textarea.error {
+input.error,
+textarea.error {
     box-shadow: 0 20px 40px -20px rgba(255, 0, 0, 0.5);
     border: 1px solid #ff0000;
-    color: #ff0000;
+    color: #4E73DF;
 }
-
 textarea.textarea-form {
     min-height: 150px;
+    padding: 1rem 2rem;
     max-width: 625px;
-    padding:1rem 2rem
 }
 
 select.select-form {
     appearance: none;
-    line-height:normal;
+    line-height: normal;
     position: relative;
     background-position: right 10px top 50%;
     background-repeat: no-repeat;
     background-image: url(../images/chevron-down.svg);
-
 }
 
 ::-webkit-input-placeholder {
     /* Chrome/Opera/Safari */
-    color:#9c9c9c;
+    color: #9c9c9c;
 }
-::-moz-placeholder {
+
+ ::-moz-placeholder {
     /* Firefox 19+ */
     color: #9c9c9c;
 }
-:-ms-input-placeholder {
+
+ :-ms-input-placeholder {
     /* IE 10+ */
     color: #9c9c9c;
 }
-:-moz-placeholder {
+
+ :-moz-placeholder {
     /* Firefox 18- */
     color: #9c9c9c;
 }
@@ -417,119 +533,22 @@ select.select-form {
 button.btn-enviar {
     border: none;
     margin-left: 1rem;
+    font-family: 'Poppins', sans-serif;
+    font-size: 16px;
     box-shadow: 0 10px 20px 0 rgba(0, 0, 0, 0.2);
     outline: none;
     cursor: pointer;
-    transition: .4s all;
-
 }
-
-button.btn-enviar:focus,
-.btns:focus {
+button.btn-enviar:focus, .btns:focus {
     background: #4E73DF;
     transform: scale(1);
+
 }
 
 
-/* FOOTER */
-.footer {
-    padding: 2rem 1rem;
-    background-color: #444;
-}
+/* Form Mobile */
 
-.footer .copy {
-    font-size: 12px;
-    width: 100%;
-}
-.footer .copy a {
-    color: #bbbbbb;
-    box-shadow: 0 1px 0 #bbbbbb;
-}
-.footer .copy a:hover {
-    color: white;
-}
-
-/******** RESPONSIVE DESIGN ********/
-
-@media screen and (max-width: 1024px) {
-    /* HERO MOBILE */
-    .title-hero {
-        font-size:30px;
-        line-height:45px;
-    }
-}
-
-@media screen and (max-width: 768px) {
-    /* MOBILE MENÚ */
-    .logotipo {
-        text-align: center;
-        margin: auto;
-        padding: 1rem 0;
-        width: 100%;
-    }
-    .logotipo img {
-        position: relative;
-        top: 5px;
-    }
-    .menu-link-desktop {
-        display: none;
-    }
-    .menu-link-mobile {
-        display: flex;
-        justify-content:center;
-        align-items:center;
-        position: fixed;
-        bottom: 0;
-        left: 0;
-        background-color: #4E73DF;
-        width: 100%;
-        box-shadow: 0 -5px 20px 0 rgba(0, 0, 0, 0.1);
-    }
-    .links-menu {
-        font-size: 14px;
-    }
-    .cta-btn {
-        line-height: 35px;
-        height: 35px;
-    }
-
-    /* SERVICES SECTION */
-    .title-section {
-        font-size:35px
-    }
-    .section-services .container .box-services {
-        width: 50%;
-    }
-
-    /* BENEFITS SECTION */
-    .section-benefits {
-        flex-direction: column;
-    }
-    .section-benefits .container {
-        width: 100%;
-        align-items: center;
-        justify-content: center;
-        padding: 0;
-    }
-    .section-benefits .title-section {
-        padding-left: 0;
-    }
-    .section-benefits .container .box-benefits {
-        margin-bottom: 2rem;
-        padding: 0 1rem 0 0;
-    }  
-    .section-benefits .container .box-benefits h3 {
-        line-height: 30px;
-    }
-    .section-benefits .container .box-benefits div {
-        margin-top: 0;
-    }
-    .section-benefits .box-image-benefits {
-        right: inherit;
-        bottom: 0;
-    }
-
-    /* CONTACTO SECTION */
+@media only screen and (max-width: 820px) {
     .section-contact {
         background-position-y: 550px;
     }
@@ -538,41 +557,42 @@ button.btn-enviar:focus,
     }
     .form-landing-page .input-field {
         width: 100%;
-        padding:0;
+        padding: 0;
     }
     textarea.textarea-form {
         width: 80%;
-        background-color: rgba(255, 255, 255, 0.8);
+        background: rgb(255 255 255 / 0.9);
     }
     button.btn-enviar {
-        width: 100%;
         margin-left: 0;
+        width: 100%;
     }
-
-    /* BTNS */
-    .btns {
-        max-width: 100%;
-    }  
-    
-    /* HERO */
-    .hero .container {
-        flex-wrap: wrap;
-        padding-top: 6rem;
-    }
-    .title-hero {
-        font-size:30px;
-        line-height:45px;
-    }
-    .image-hero {
-        margin-top: 2rem;
-    }
-
 }
-@media screen and (max-width: 425px) {
+
+
+/* FOOTER */
+
+.footer {
+    padding: 2rem 1rem;
+    background: #444444;
+}
+
+.footer .copy {
+    font-size: 12px;
+    width: 100%;
+}
+
+.footer .copy a {
+    color: #bbbbbb;
+    box-shadow: 0 1px 0 transparent;
+}
+
+.footer .copy a:hover {
+    box-shadow: 0 1px 0 #bbbbbb;
+}
+
+@media only screen and (max-width: 480px) {
     .footer .copy {
         padding-bottom: 4rem;
-    }
-    .section-services .container .box-services {
-        width: 100%;
     }
 }
